Fix responsive layout issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -27,7 +27,7 @@ html, body, .container, .home {
 
 a {
     color: $links-color;
-    
+
     &:hover {
         color: $links-color-hover;
     }
@@ -38,22 +38,22 @@ a {
 #coming-soon {
     text-align: center;
     margin: $spacing-unit;
-    
+
     img {
         margin: 0 auto;
         display: inline-block;
     }
-    
+
     #social-links {
         margin: 20px auto;
     }
-    
+
     #coming-soon-header {
         font-family: 'Cookie';
         font-weight: 400;
         font-size: 100px;
     }
-    
+
     .coming-soon-copy-container {
         font-weight: 300;
     }
@@ -62,7 +62,7 @@ a {
 .container-center-vertical {
     display: table;
     height: 100%;
-    
+
     .center-vertical {
         display: table-cell;
         vertical-align: middle;
@@ -80,7 +80,7 @@ a {
     .fa {
         color: $text-color;
     }
-    
+
     &:hover {
         .fa {
             color: inherit;
@@ -90,12 +90,12 @@ a {
 
 /* iPhone 5 */
 
-@media screen and (max-width: 480px) {
-    
+@media screen and (max-width: 550px) {
+
     #coming-soon {
         #coming-soon-header {
             font-size: 50px;
         }
     }
-    
+
 }
